# mipidsi

./: Cargo.toml
src/: graphics.rs  interface.rs
src/interface/: spi_async.rs
