[package]
name = "mipidsi"
description = "MIPI Display Command Set compatible generic driver"
version = "0.9.0"
authors = ["Ales Katona <almindor@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/almindor/mipidsi"
keywords = ["embedded-hal-driver", "mipi", "dcs", "display"]
readme = "README.md"
documentation = "https://docs.rs/mipidsi"
rust-version = "1.75"

[dependencies]
embedded-graphics-core = "0.4.0"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
defmt = "0.3.10"
defmt-rtt = "0.4.1"
panic-probe = { version = "0.3.2", features = ["print-defmt"] }


[dependencies.heapless]
optional = true
version = "0.8.0"

[dev-dependencies]
embedded-graphics = "0.8.1"

[features]
default = ["batch"]
batch = ["heapless"]

[workspace]
members = ["mipidsi-async"]

